--- a/css/main_2.css
+++ b/css/main_2.css
@@ -86,46 +86,29 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-  /*aside, section{
-    height: 200px;
-  }
+  /*-------------------composant-------------------------------------*/
 
-  aside{
-    background-color: red;
-  }
+header{
+  
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
+}
+nav{
+  margin: 0.2em 0;
+  background: #ccc;
+  color: #000;
+  padding: 0.2em 0;
+}
 
-  section{
-    background-color: blue;
-  }
-  nav{
-    background-color: green;
-  }
 
-  @media(min-width: 992px){
-    nav{
-      height: 200px;
-    }
-  }
-  */
 
-  aside, section {
-    height: 200px;
-  }
-  
-  article {
-  }
-  
-  aside {
-    background-color: red;
-  }
-  
-  section {
-    background-color: blue;
-  }
-  
-  article {
-    background-color: green;
-  }
+
+
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
